Add middleware and auth route
