# src/types/role/Role.ts
@@ -1,0 +1,7 @@
+import { Types } from 'mongoose'
+
+export default interface RoleType {
+    _id?: Types.ObjectId
+    description?: string
+    name: string
+}
