# src/types/user/User.ts
@@ -1,11 +1,11 @@
-import { Types } from "mongoose";
+import { Types } from 'mongoose'
 
 export default interface UserType {
-	_id?: Types.ObjectId;
-	avatarUrl?: string;
-	email: string;
-	firstName?: string;
-	lastName?: string;
-	password?: string;
-	phoneNumber?: string;
+    _id?: Types.ObjectId
+    avatarUrl?: string
+    email?: string
+    firstName?: string
+    lastName?: string
+    password?: string
+    role?: Types.ObjectId
 }
